--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -23,7 +23,7 @@
     <tbody>
       <tr th:each="studentDetail : ${studentDetails}">
         <td th:text="${studentDetail.student.id}">1</td>
-        <td><a th:href="@{/student(id=${studentDetail.student.id})}" th:text="${studentDetail.student.name}">山田太郎</a></td>
+        <td><a th:href="@{/student/{id}(id=${studentDetail.student.id})}" th:text="${studentDetail.student.name}">山田太郎</a></td>
         <td th:text="${studentDetail.student.kanaName}">ヤマダタロウ</td>
         <td th:text="${studentDetail.student.nickname}">タロ</td>
         <td th:text="${studentDetail.student.email}">yamada.taro@example.com</td>
