--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -45,7 +45,7 @@
   </div>
   <div>
     <label>退会済</label>
-    <input type="checkbox" th:field="*{student.isDeleted}">
+    <input type="checkbox" th:field="*{student.deleted}">
   </div>
   <div>
     <button type="submit">更新</button>
